addons/gateway-api/gw-tls-termination-sample-01-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
      - name: api-service
        image: nginx:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "50m"
          requests:
            memory: "64Mi"
            cpu: "20m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: nginx-config
        configMap:
          name: api-service-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: demo
spec:
  selector:
    app: api-service
  ports:
  - port: 8080
    targetPort: 80
