addons/gateway-api/approuting-tls-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-app
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-app
  template:
    metadata:
      labels:
        app: dev-app
    spec:
      containers:
      - name: nginx
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: dev-service
  namespace: demo
spec:
  selector:
    app: dev-app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.azure.com/tls-cert-keyvault-uri: https://KVNAME.vault.azure.net/certificates/CERTNAME
  name: webapp-routing-ing
  namespace: demo
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - host: HOSTNAME
    http:
      paths:
      - backend:
          service:
            name: dev-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - HOSTNAME
    secretName: keyvault-webapp-routing-ing
