addons/gateway-api/gw-multidomain-sample-01.yaml
# Shared Gateway and Each Namespace HttpRoute, Different Hostnames
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: gw-share
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "sn-loadbalancer"
    service.beta.kubernetes.io/azure-load-balancer-ipv4: 10.225.4.20
spec:
  gatewayClassName: approuting-istio
  listeners:
  - name: devhyukjun.info
    hostname: "*.devhyukjun.info"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foo
  namespace: ns-foo
spec:
  parentRefs:
  - name: demo-gateway
    namespace: gw-share
  hostnames:
    - foo.devhyukjun.info
  rules:
    - backendRefs:
      - name: foo
        port: 8080
      matches:
      - path:
          value: "/"
        headers: 
        - name: "version"
          value: "foo"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bar
  namespace: ns-bar
spec:
  parentRefs:
  - name: demo-gateway
    namespace: gw-share
  hostnames:
    - bar.devhyukjun.info
  rules:
    - backendRefs:
      - name: bar
        port: 8080
      matches:
      - path:
          value: "/"
        headers: 
        - name: "version"
          value: "bar"
