addons/gateway-api/gw-multidomain-sample-02.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-gateway-02
  namespace: demo
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "sn-loadbalancer"
    service.beta.kubernetes.io/azure-load-balancer-ipv4: 10.225.4.21
spec:
  gatewayClassName: approuting-istio
  listeners:
  - name: all
    hostname: "*.devhyukjun.info"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: all-test
  namespace: demo
spec:
  parentRefs:
  - name: demo-gateway-02
  hostnames:
    - foo.devhyukjun.info
    - bar.devhyukjun.info
  rules:
    - backendRefs:
      - name: demo-app
        port: 8080
      matches:
      - path:
          value: "/"
        headers: 
        - name: "version"
          value: "v2"
